aclocaldir = $(prefix)/share/aclocal
aclocal_DATA = $(top_srcdir)/share/aclocal/*

antioch_default_filesdir = $(prefix)/share/antioch_default_files
antioch_default_files_DATA = $(top_srcdir)/share/antioch_default_files/*

xml_inputsdir = $(prefix)/share/xml_inputs
xml_inputs_DATA = $(top_srcdir)/share/xml_inputs/*

EXTRA_DIST  = $(aclocal_DATA)
EXTRA_DIST += $(antioch_default_files_DATA)
EXTRA_DIST += $(xml_inputs_DATA)
